# WeLearn-api

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  .isort.cfg  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yaml  eval_questions&answers.csv  locustfile.py  metrics.py  pylintrc  pyproject.toml  pytest.ini  rag-metrics.py  rag-metrics_ragas.py  rag_metrics_langsmith.py  syllabus_payload_spl.json
.github/workflows/: ci.yml  lint-and-test.yml
k8s/welearn-api/: Chart.yaml  local.test.yaml  secrets.dev.yaml  secrets.prod.yaml  secrets.staging.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
k8s/welearn-api/templates/: azure-secrets.yaml  deployment.yaml  ingress.yaml  rate-limiting.yaml
src/: main.py
src/app/api/: dependencies.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: chat.py  chat_utils.py  metric.py  micro_learning.py  search.py  tutor.py  user.py
src/app/api/shared/enpoints/: health.py
src/app/baml_src/: clients.baml  resume.baml  types.baml
src/app/baml_src/agents/tutor/: activity_guide_generator.baml  activity_recommendation.baml  competency_mapping.baml  course_description.baml  learning_objectives.baml  (+3 more)
src/app/core/: config.py  langsmith.py  lifespan.py
src/app/middleware/: monitor_requests.py
src/app/models/: chat.py  collections.py  db_models.py  documents.py  metric.py  search.py
src/app/search/api/: router.py
src/app/search/helpers/: search_helpers.py
src/app/search/models/: search.py
src/app/search/services/: search.py
src/app/services/: abst_chat.py  agent.py  agents.py  constants.py  data_collection.py  data_quality.py  exceptions.py  helpers.py  llm_proxy.py  pdf_extractor.py  pedagogical_framework.txt  prompts.py  search.py  search_helpers.py  security.py  sql_db.py  sql_service.py  subject_vectors.json
src/app/services/sql_db/: queries.py  queries_user.py  sql_service.py
src/app/services/tutor/: agents.py  models.py  prompts.py  template.md  tutor.py  utils.py
src/app/shared/api/: health.py
src/app/shared/domain/: constants.py  exceptions.py
src/app/shared/infra/: abst_chat.py  llm_proxy.py
src/app/shared/utils/: dependencies.py  requests.py  utils.py
src/app/tests/: conftest.py  test_utils.py
src/app/tests/services/: test_abst_chat.py  test_abst_chat_utils.py  test_agent.py  test_data_collection.py  test_data_quality.py  test_exceptions.py  test_helpers.py  test_llm_proxy.py  test_pdf_extractor.py  test_search.py  test_security.py
src/app/tests/tests_files/: tutor_test_file.txt
src/app/tutor/api/: router.py
src/app/tutor/domain/: disciplinary_skills.json  template.md
src/app/tutor/service/: agents.py  models.py  orchestrator.py  tutor.py
src/app/tutor/tools/: __init__.py  distribute_objectives.py  filter_activities.py  greencomp_data.py  validate_format.py
src/app/user/api/: router.py
src/app/user/models/: models.py
src/app/user/utils/: utils.py
src/app/utils/: decorators.py  logger.py
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/baml_src/: chat_history.baml  clients.baml  resume.baml
src/crews/: agents.yaml  crew_manager.py  oddish_crew.py  tasks.yaml
tests/: conftest.py
tests/api/api_v1/: test_chat.py
tests/services/: test_agent.py  test_data_quality.py  test_exceptions.py  test_search.py
tests/services/tutor/: test_utils.py
(+19 files in other folders)
