[tool.poetry]
name = "welearn-api"
version = "0.1.0"
description = ""
authors = ["Sandra Guerreiro <sandragjacinto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
azure-ai-inference = "^1.0.0b8"
azure-core = "^1.32.0"
backoff = "^2.2.1"
ecologits = "^0.5.2"
fastapi = "^0.115.8"
huggingface-hub = "^0.29.1"
langdetect = "^1.0.9"
litellm = "^1.61.15"
mistralai = "^1.2.2"
openai = "^1.60.2"
psycopg2-binary = "^2.9.10"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
pylint-pydantic = "^0.2.4"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.18"
qdrant-client = "^1.10.0"
requests = "^2.31.0"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.4.1"
sqlalchemy = "^2.0.35"
transformers="^4.50.0"
torch = {version = "^2.2.2+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.2+cpu", source = "pytorch_cpu"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
autogen-core = "^0.4.9.3"
autogen-ext = "^0.4.9.3"
autogen-agentchat = "^0.4.9.2"
pypdf = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
flake8 = "^6.1.0"
black = "^24.3.0"
isort = "^5.12.0"

[tool.poetry.group.metrics.dependencies]
locust = "^2.20.1"
ragas = "^0.1.9"
langchain-community = ">=0.2.1"
prettytable = "^3.10.0"



[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
