[tool.poetry]
name = "welearn-api"
version = "0.1.0"
description = ""
authors = ["Sandra Guerreiro <sandragjacinto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
azure-core = "^1.32.0"
backoff = "^2.2.1"
ecologits = "^0.5.2"
fastapi = "^0.115.8"
huggingface-hub = "^0.29.1"
langdetect = "^1.0.9"
litellm = "^1.61.15"
psycopg2-binary = "^2.9.10"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
pylint-pydantic = "^0.2.4"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.18"
qdrant-client = "^1.15.0"
requests = "^2.32.4"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.4.1"
sqlalchemy = "^2.0.35"
transformers="^4.50.0"
torch = {version = "^2.2.2+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.2+cpu", source = "pytorch_cpu"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
autogen-core = "^0.5.7"
autogen-ext = "^0.5.7"
autogen-agentchat = "^0.5.7"
pypdf = "^6.4.0"
numpy = "^1.26.4"
python-docx = "^1.1.2"
langchain-core = "^0.3.79"
langgraph = "^0.6.7"
langgraph-checkpoint-postgres = "^2.0.23"
azure-ai-inference = "^1.0.0b9"
azure-identity = "^1.25.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
welearn-database = "1.2.0.dev0"
bs4 = "^0.0.2"
urllib3 = "^2.5.0"
refinedoc = "^1.0.1"
langchain-azure-ai = "^0.1.8"
aiohttp = "^3.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
flake8 = "^6.1.0"
black = "^24.3.0"
isort = "^5.12.0"

[tool.poetry.group.metrics.dependencies]
locust = "^2.20.1"
ragas = ">=0.2.15"
langchain-community = ">=0.2.1"
prettytable = "^3.10.0"
langchain-huggingface = "^0.1.2"



[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
